# python-package-template

./: .tag.toml  LICENSE  README.md  Taskfile.yml  conftest.py  copier.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  release.yml
template/: .gitignore  .tag.toml.jinja  README.md.jinja  Taskfile.yml  mkdocs.yml.jinja  pyproject.toml.jinja
template/.github/: dependabot.yml.jinja
template/.github/workflows/: CI.yml  labeler.yml  release-drafter.yml  release.yml
template/src/{{slug}}/: py.typed.jinja  {{slug}}.py.jinja
template/tests/: test_obvious.py.jinja
tests/: test_template.py
